# rust-lambda-api-poc

./: Cargo.toml  README.md
src/: main.rs
