[package]
name = "rust-lambda-api-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid", "preserve_order"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
serde = "1.0.219"
uuid = { version = "1", features = ["serde"] }
